test/compile-fail/exp__nil.he
fn main
{
    let a = nil;     //~ ERROR 3013
    let b:int = nil; //~ ERROR 3001
}
